# home-assistant-montreal-aqi

./: .gitignore  .pre-commit-config.yaml  .prek.yaml  CHANGELOG.md  DOCUMENTATION.md  README.md  docker-compose.yml  hacs.json  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_test.txt  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  close_stale.yml  hacs.yml  hassfest.yml
custom_components/montreal_aqi/: __init__.py  air_quality.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/montreal_aqi/translations/: en.json  es.json  fr.json
ha_config/: configuration.yaml
scripts/: README.md  montreal_aqi_api.py  test_api.py
tests/: conftest.py  test_air_quality.py  test_api_errors.py  test_config_flow.py  test_coordinator.py  test_coordinator_errors.py  test_init.py  test_sensor_aqi.py  test_sensor_pollutants.py
tests/unit/: test_api.py
